# playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/affine-body-dynamics/: CMakeLists.txt  README.md
cmake/affine-body-dynamics/src/affinebody/: affinebody.h  contact_ip.cpp  contact_ip.h  massmatrix_integral.py  orthogonal_ip.h  orthogonal_ip.py
cmake/affine-body-dynamics/src/mains/: CMakeLists.txt  polyscope_example.cpp  sdl_example.cpp
cmake/affine-body-dynamics/src/particle2d/: CMakeLists.txt  model.cc  model.hh  scene.hh  view.cc  view.hh
go/: go.mod
go/algo/: binary_search.go  binary_search_test.go  matrix_multiplication.go  matrix_multiplication_test.go  substring_search.go  substring_search_test.go
go/oree/: README.md  oree.go  oree_test.go
go/oree/cli/: main.go
go/oree/cli/cmd/: root.go  steps.go  trails.go
go/oree/cli/cmd/trails/: delete.go  list_after.go  move_before.go  prepend.go  trails.go  update.go
go/oree/cli/common/: args_test.go  format.go  oree_json_file.go
go/oree/cli/oree/: main.go
go/oree/cli/oree/cmd/: root.go
go/oree/cli/oree/cmd/areas/: areas.go  delete.go  list_after.go  move_before.go  prepend.go  update.go
go/oree/cli/oree/cmd/areas/trails/: delete.go  list_after.go  move_before.go  prepend.go  trails.go
go/oree/cli/oree/cmd/blocks/: blocks.go  create.go  delete.go  dup_with_date.go  list_before.go  update.go
go/oree/cli/oree/cmd/sessions/: close.go  create.go  delete.go  list_before.go  open.go  sessions.go  update.go
go/oree/cli/oree/cmd/steps/: activate.go  archive.go  delete.go  list_after.go  move_after.go  pin.go  prepend.go  steps.go  update.go  update_status.go
go/oree/cli/oree/cmd/trails/: delete.go  list_after.go  move_before.go  prepend.go  trails.go  update.go
go/oree/cli/oree/common/: args.go  args_test.go  format.go
go/oree/oreejson/: area.go  areas.go  block.go  blocks.go  list.go  list_data.go  list_data_test.go  open_session.go  ordered_list.go  ordered_list_data.go  ordered_list_data_test.go  ordered_list_test.go  oree.go  oree_json.go  oree_test.go  ref_list.go  session.go  sessions.go  sorted_list.go  sorted_list_test.go  step.go  steps.go  trail.go  trails.go
make/cf1996/: a.cc  b.cc  b.in  c.cc
make/cf1997/: a.cc  a.in  b.cc  b.in  c.cc  c.in  d.cc  e.cc  e.in
make/cf1998/: a.cc  b.cc  b.in  c.cc  c.in  d.cc  d.in
make/cf1999/: a  a.cc  b  b.cc  c  c.cc  d  d.cc  d.in  e  e.cc  f  f.cc  g1  g1.cc  g2  g2.cc
make/cf2000/: a  a.cc  b  b.cc  c  c.cc  d  d.cc  d.in  e  e.cc  f  f.cc  g  g.cc  g.in  h  h.cc
make/cf2001/: a  a.cc  b  b.cc  c  c.cc  d  d.cc  e1  e1.cc  e1.in
make/cf2002/: a  a.cc  b  b.cc  c.cc  d1  d1.cc  d1.in
make/cf2003/: a.cc  a.in  b.cc  b.in  c.cc
make/cf2004/: a.cc  a.in  b.cc  b.in  c.cc  c.in  d.cc  d.in  e.cc  e.in
make/cf2019/: a.cc  b.cc  c.cc
make/cf2020/: a.cc  a.in  b.cc  c.cc  d.cc  d.in
src/: CMakeLists.txt  main.cc
src/affinebody/: CMakeLists.txt  affinebody.cpp  affinebody.h  contact_ip.cpp  distance.h  distance.py  massmatrix_integral.h  massmatrix_integral.py
src/mains/: CMakeLists.txt  affinebody_example.cpp
src/particle2d/: CMakeLists.txt  particle2d.cc  particle2d.hh
